--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Welcome to My GitHub Page</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Leo's Karaoke World</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f9f9f9;
+      padding: 40px;
+      color: #333;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    a {
+      color: #2980b9;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <p>This is a simple homepage hosted on GitHub Pages.</p>
+  <h1>🎤 Leo's Karaoke World</h1>
+  <p>Welcome to my personal page where I share my passion for music and karaoke!</p>
+  <p>🎶 Follow me on Instagram:<br> 
+     <a href="https://www.instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a>
+  </p>
+  <p>🎧 More cool stuff coming soon. Stay tuned!</p>
 </body>
 </html>
