--- a/index.html
+++ b/index.html
@@ -1,36 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Leo's Karaoke World</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f9f9f9;
-      padding: 40px;
-      color: #333;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-      font-weight: bold;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
+<header>
   <h1>🎤 Leo's Karaoke World</h1>
+</header>
+
+<section id="about">
   <p>Welcome to my personal page where I share my passion for music and karaoke!</p>
-  <p>🎶 Follow me on Instagram:<br> 
-     <a href="https://www.instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a>
-  </p>
-  <p>🎧 More cool stuff coming soon. Stay tuned!</p>
-</body>
-</html>
+</section>
+
+<section id="insta">
+  <p>🎶 Follow me on Instagram: <a href="https://instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a></p>
+</section>
+
+<section id="video">
+  <h2>Featured Karaoke</h2>
+  <!-- I can embed a video here -->
+</section>
+
+<footer>
+  <p>© 2025 Leo. Made with 🎵 + ❤️</p>
+</footer>
