--- a/index.html
+++ b/index.html
@@ -1,20 +1,60 @@
-<header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Leo's Karaoke World</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+      color: white;
+      text-align: center;
+      padding: 2rem;
+    }
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+    p {
+      font-size: 1.3rem;
+      margin-bottom: 1.5rem;
+    }
+    a {
+      color: #00ffff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+    iframe {
+      margin-top: 2rem;
+      width: 90%;
+      max-width: 560px;
+      height: 315px;
+      border: none;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+    }
+    .footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: #ccc;
+    }
+  </style>
+</head>
+<body>
   <h1>🎤 Leo's Karaoke World</h1>
-</header>
-
-<section id="about">
   <p>Welcome to my personal page where I share my passion for music and karaoke!</p>
-</section>
 
-<section id="insta">
-  <p>🎶 Follow me on Instagram: <a href="https://instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a></p>
-</section>
+  <p>🎶 Follow me on Instagram:<br>
+    <a href="https://www.instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a>
+  </p>
 
-<section id="video">
-  <h2>Featured Karaoke</h2>
-  <!-- I can embed a video here -->
-</section>
+  <!-- Embedded YouTube video placeholder -->
+  <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
 
-<footer>
-  <p>© 2025 Leo. Made with 🎵 + ❤️</p>
-</footer>
+  <div class="footer">
+    © 2025 Leo’s Karaoke World. All rights reserved.
+  </div>
+</body>
+</html>
