--- a/index.html
+++ b/index.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leo's Karaoke World</title>
   <style>
     body {
-      margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
-      color: white;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+      color: #fff;
+      margin: 0;
+      padding: 0;
       text-align: center;
-      padding: 2rem;
+    }
+    header {
+      padding: 50px 20px 20px;
     }
     h1 {
-      font-size: 3rem;
-      margin-bottom: 0.5rem;
+      font-size: 3em;
+      margin-bottom: 0.2em;
     }
     p {
-      font-size: 1.3rem;
-      margin-bottom: 1.5rem;
+      font-size: 1.3em;
+      margin-bottom: 1em;
     }
     a {
-      color: #00ffff;
-      text-decoration: none;
+      color: #00ffcc;
       font-weight: bold;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .section {
+      margin-top: 40px;
     }
     iframe {
-      margin-top: 2rem;
       width: 90%;
       max-width: 560px;
       height: 315px;
       border: none;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 255, 0.5);
+      margin-top: 20px;
     }
-    .footer {
-      margin-top: 3rem;
-      font-size: 0.9rem;
-      color: #ccc;
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background: #111;
+      font-size: 0.9em;
+      color: #bbb;
     }
   </style>
 </head>
 <body>
-  <h1>🎤 Leo's Karaoke World</h1>
-  <p>Welcome to my personal page where I share my passion for music and karaoke!</p>
+  <header>
+    <h1>🎤 Leo's Karaoke World</h1>
+    <p>Welcome to my personal page where I share my passion for music and karaoke!</p>
+    <p>🎶 Follow me on Instagram: <a href="https://www.instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a></p>
+  </header>
 
-  <p>🎶 Follow me on Instagram:<br>
-    <a href="https://www.instagram.com/letzz_sing_together" target="_blank">@letzz_sing_together</a>
-  </p>
-
-  <!-- Embedded YouTube video placeholder -->
-  <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-
-  <div class="footer">
-    © 2025 Leo’s Karaoke World. All rights reserved.
+  <div class="section">
+    <h2>🎧 Latest Karaoke Performance</h2>
+    <iframe src="https://www.youtube.com/embed/tgbNymZ7vqY" allowfullscreen></iframe>
   </div>
+
+  <footer>
+    <p>Made with ❤️ by Leo | More cool stuff coming soon. Stay tuned!</p>
+  </footer>
 </body>
 </html>
